# doc-gpt

./: .gitignore  README.md  pyproject.toml
src/doc_gpt/: ai_client.py  cli.py  config.py  utils.py
