[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-gpt"
version = "0.6.0"
description = "A CLI tool to process document files using Large Language Models"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = [
    {name = "ShinChven", email = "shinchven@gmail.com"}
]
dependencies = [
    "click",
    "openai",
    "anthropic",
    "requests",
    "python-docx",
    "PyPDF2",
    "markdown",
    "python-pptx",
    "prompt_toolkit",
    "google-generativeai",
]

[project.scripts]
doc-gpt = "doc_gpt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["doc_gpt*"]

[project.urls]
homepage = "https://github.com/ShinChven/doc-gpt.git"